#15957 closed bug (fixed)
Preferences/Input: freeze when select 5 button mouse
Reported by: | X512 | Owned by: | PreetpalKaur |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Preferences/Input | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev54101.
When selecting 5 button mouse Input preference freeze in getMappingNumber
. Freeze is preserved when opening Input preference again and select mouse.
Change History (3)
comment:1 by , 5 years ago
comment:3 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
https://review.haiku-os.org/c/haiku/+/2560